--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,21 @@ body{
     rgba(0, 0, 0, 1) 100%
   );
 }
+
+button {
+  background-color: #1646a0;
+  color: #fff;
+  padding: 0 45px;
+  border: 2px solid #fff;
+  border-radius: 25px;
+  height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+button:hover {
+  background: #0923af;
+}
