--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
- html, body{
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+html, body{
   height: 100%;
 }
 
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fredoka One', cursive;
   margin: 0;
   padding: 0;
   color: #f8f8ff;
   background: rgb(9, 35, 175);
   background: linear-gradient(
     180deg,
-    rgba(9, 35, 175, 1) 0%,
+    rgb(10, 110, 55) 0%,
     rgba(0, 0, 0, 1) 100%
   );
 }
