--- a/src/components/Telainicial.css
+++ b/src/components/Telainicial.css
@@ -1,8 +1,22 @@
+.start {
+  display: flex;
+  /* flex-direction: column; */
+  /* border: 5px solid red; */
+  margin-top: 8%;
+  justify-content: space-between;
+}
+
 .start h1 {
   font-size: 3.5em;
 }
 
 .start p {
   margin-bottom: 2em;
-  color: #ecfa00;
+  color: #f8f8ff;
+}
+
+.start-square {
+  background-color: #292828;
+  height: 80%;
+  border-radius: 15px;
 }
