--- a/src/index.css
+++ b/src/index.css
@@ -9,16 +9,16 @@ body{
   margin: 0;
   padding: 0;
   color: #f8f8ff;
-  background: rgb(9, 35, 175);
+  background: rgb(10, 126, 62);
   background: linear-gradient(
     180deg,
-    rgb(10, 110, 55) 0%,
+    rgb(10, 126, 62) 0%,
     rgba(0, 0, 0, 1) 100%
   );
 }
 
 button {
-  background-color: #1646a0;
+  background-color: #0b5a16;
   color: #fff;
   padding: 0 45px;
   border: 2px solid #fff;
@@ -32,5 +32,5 @@ button {
 }
 
 button:hover {
-  background: #0923af;
+  background: #0b8307;
 }
