--- a/src/components/Jogo.css
+++ b/src/components/Jogo.css
@@ -7,13 +7,14 @@
 }
 
 .tip span {
-  color: #ecfa00;
+  color: #f8e327;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .word-container {
   margin: 1.5em;
   padding: 1.5em;
-  border: 20px solid #ecfa00;
+  border: 20px solid #FF66C4;
   display: flex;
 }
 
@@ -46,4 +47,27 @@
   font-size: 2em;
   text-align: center;
   margin-right: 1em;
+}
+
+@media screen and (max-width: 768px) {
+  .letter,
+  .blank-square {
+    font-size: 20px;
+    line-height: 1.5;
+    border: 3px solid #000;
+    height: 30px;
+    width: 30px;
+    text-transform: uppercase;
+    background-color: #fff;
+    color: #000;
+    font-weight: bold;
+  }
+
+  .letter-container input {
+    height: 30px;
+    width: 30px;
+    font-size: 2em;
+    text-align: center;
+    margin-right: 1em;
+  }
 }
